--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -16,10 +16,12 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/localize": "^16.2.10",
     "@angular/material": "^16.2.6",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
