--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -13,7 +13,7 @@
     "@amcharts/amcharts5": "^5.4.8",
     "@angular/animations": "^16.2.0",
     "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
+    "@angular/compiler": "16.2.10",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
     "@angular/localize": "^16.2.10",
@@ -29,9 +29,9 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.3",
+    "@angular-devkit/build-angular": "^16.2.4",
     "@angular/cli": "~16.2.3",
-    "@angular/compiler-cli": "^16.2.0",
+    "@angular/compiler-cli": "16.2.10",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
