--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.3.11",
     "@angular/router": "^17.3.11",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,12 +33,15 @@
     "@angular/cli": "~17.3.8",
     "@angular/compiler-cli": "17.3.11",
     "@types/jasmine": "~4.3.0",
+    "autoprefixer": "^10.4.19",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "~5.4.5"
   }
 }
